--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "fexfetch",
   "version": "1.0.3",
   "description": "Alternative for neofetch. Written in JavaScript.",
-  "main": "./index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "main": "./lib/index.js",
+  "bin": {
+    "fetch": "./bin/index.js"
   },
   "repository": {
     "type": "git",
